# malchan

./: .gitignore  README.md  pyproject.toml
docs/: cleanup-note-2.md  cleanup-note.md  features-layout.md  import-policy.md  model-pipeline-layout.md  preprocessing-layout.md
frontend/: README.md  index.html  package.json  vite.config.js
frontend/src/: App.jsx  api.js  data.js  main.jsx  styles.css  xai.css
frontend/src/components/: Common.jsx  ComparisonTable.jsx  DataTable.jsx  MetricCard.jsx  SimpleChart.jsx
frontend/src/context/: WorkbenchContext.jsx
frontend/src/pages/: DataPage.jsx  ExplainPage.jsx  ExplorePage.jsx  ModelPage.jsx  OptimizePage.jsx  PreparePage.jsx  ReportPage.jsx
src/machine_learning/: __init__.py
src/machine_learning/models/: __init__.py
src/machine_learning/models/export/: __init__.py  export_visualization.py
src/machine_learning/models/inverse_analysis/: __init__.py  utils.py
src/machine_learning/models/machine_learning/: __init__.py  explainability.py  models.py  training.py  utils.py
src/machine_learning/models/machine_learning/pipelines/: __init__.py  predictor_pipeline.py  preprocess_pipeline.py
src/malchan/: __init__.py
src/malchan/app/: README.md  __init__.py
src/malchan/app/api/: __init__.py  main.py  routes.py  xai_routes.py
src/malchan/app/core/: __init__.py  settings.py
src/malchan/app/schemas/: __init__.py  comparison.py  inverse_analysis.py  models.py  xai.py
src/malchan/app/services/: __init__.py  comparison_service.py  model_service.py  xai_comparison_hook.py  xai_pdp_service.py  xai_service.py
src/malchan/app/web/: __init__.py  static.py
src/malchan/export/: __init__.py  export.py  export_visualization.py
src/malchan/features/: __init__.py
src/malchan/features/chemistry/: __init__.py  fingerprints.py  smiles.py
src/malchan/features/materials/: __init__.py  composition.py  matminer.py  xenonpy.py
src/malchan/inverse_analysis/: __init__.py  models.py  utils.py  visualize.py
src/malchan/llm/: README.md  __init__.py  client.py  configs.py  parser.py  planner.py  registry.py  suggestions.py  summary.py  validation.py
src/malchan/models/: __init__.py  compare.py  explainability.py  models.py  training.py  utils.py  visualize.py
src/malchan/models/pipelines/: __init__.py  pipeline.py  predictor_pipeline.py  preprocess_pipeline.py
src/malchan/pipeline/: __init__.py  analysis_extensions.py  base.py  multi_output.py  single_output.py
src/malchan/preprocessing/: __init__.py  categorical.py  compose.py  missing.py  numeric.py  scaling.py
src/malchan/visualization/: README.md  __init__.py  inverse_analysis_plots.py  machine_learning_plots.py
tests/: test_app_api.py  test_app_comparison_activation.py  test_app_comparison_api.py  test_app_structure.py  test_app_xai_activation.py  test_app_xai_api.py  test_cv_predictions.py  test_features_imports.py  test_imports.py  test_inverse_analysis_compat.py  test_llm_clients.py  test_llm_configs.py  test_llm_import.py  test_llm_parser.py  test_llm_planner.py  test_llm_registry.py  test_llm_summary.py  test_llm_validation.py  test_machine_learning_plots.py  test_model_analysis_methods.py  test_multi_comparison_tuning.py  test_pipeline_context_fit.py  test_pipeline_imports.py  test_predictor_pipeline.py  test_preprocessing_imports.py  test_training.py  test_web_ui_mount.py
