[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malchan"
version = "0.1.0"
description = "A lightweight machine-learning workflow toolkit for model comparison, visualization, inverse analysis, and report export."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "tanaka akihiro", email = "tanakakao3373@gmail.com" },
]
keywords = [
  "machine-learning",
  "model-comparison",
  "inverse-analysis",
  "visualization",
  "materials-informatics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.11",
  "typing-extensions>=4.8",
]

[project.optional-dependencies]
models = [
  "catboost>=1.2",
  "imbalanced-learn>=0.12",
  "lightgbm>=4.0",
  "optuna>=3.6",
  "xgboost>=2.0",
]
materials = [
  "matminer>=0.9",
  "mendeleev>=0.17",
  "pymatgen>=2024.1",
  "rdkit>=2023.9",
  "scikit-fingerprints>=1.0",
  "xenonpy>=0.6",
]
inverse = [
  "optuna>=3.6",
]
visualization = [
  "matplotlib>=3.7",
  "plotly>=5.18",
  "shap>=0.44",
]
export = [
  "matplotlib>=3.7",
  "openpyxl>=3.1",
  "statsmodels>=0.14",
]
web = [
  "fastapi>=0.115",
  "pydantic>=2.7",
  "uvicorn[standard]>=0.30",
]
llm = [
  "google-genai>=1.0",
  "httpx>=0.27",
  "openai>=1.0",
  "pydantic>=2.7",
]
notebook = [
  "ipykernel>=6.0",
  "jupyterlab>=4.0",
]
test = [
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
dev = [
  "black>=24.0",
  "build>=1.2",
  "httpx>=0.27",
  "mypy>=1.8",
  "pre-commit>=3.6",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "twine>=5.0",
]
all = [
  "black>=24.0",
  "build>=1.2",
  "catboost>=1.2",
  "fastapi>=0.115",
  "google-genai>=1.0",
  "httpx>=0.27",
  "imbalanced-learn>=0.12",
  "ipykernel>=6.0",
  "jupyterlab>=4.0",
  "lightgbm>=4.0",
  "matminer>=0.9",
  "matplotlib>=3.7",
  "mendeleev>=0.17",
  "mypy>=1.8",
  "openai>=1.0",
  "openpyxl>=3.1",
  "optuna>=3.6",
  "plotly>=5.18",
  "pre-commit>=3.6",
  "pydantic>=2.7",
  "pymatgen>=2024.1",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "rdkit>=2023.9",
  "ruff>=0.6",
  "scikit-fingerprints>=1.0",
  "shap>=0.44",
  "statsmodels>=0.14",
  "twine>=5.0",
  "uvicorn[standard]>=0.30",
  "xenonpy>=0.6",
  "xgboost>=2.0",
]

[project.urls]
Repository = "https://github.com/tanakakao/malchan"
Issues = "https://github.com/tanakakao/malchan/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
malchan = ["app/web/static/**/*"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["malchan*"]
namespaces = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
]
ignore = [
  "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["malchan"]

[tool.black]
line-length = 120
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = false
